@@ -5,3 +5,4 @@
 20070612 version: io_poll 0.3
 20070615 code: updated cpj tools and sydeps.
 20070615 version: io_poll 0.31
+20080115 code: updated inst-check.c
